fix top bar z-index

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -19,7 +19,7 @@ footer {
 }
 
 header {
-  @apply pb-6 mb-6;
+  @apply mb-28 z-50;
 }
 
 footer {
